--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -21,7 +21,8 @@
     }
     .task-bottom{
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
+      align-items: center;
       width: 100%;
       button{
         padding: 5px 10px;
