--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -1,6 +1,6 @@
 .task-container{
   padding: 10px 10px;
-  border: 1px solid black;
+  border: 2px solid #cccccc;
   width: 100%;
   border-radius: 8px;
   display: flex;
