--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -5,7 +5,22 @@
     h1{
       font-size: 30px;
     }
-    border-bottom: 2px solid black;
-    margin-bottom: 35px;
+    border-bottom: 2px solid #cccccc;
+  }
+  .home-button-action{
+    button{
+      padding: 5px 10px;
+      font-size: 17px;
+      border: 2px solid #cccccc;
+      background: none;
+      border-radius: 5px;
+      transition: 0.1s ease;
+      cursor: pointer;
+    }
+    button:hover{
+      background-color: blue;
+      color: white;
+    }
+    margin: 35px 0;
   }
 }
