Implement change task statut

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -10,6 +10,7 @@
   .home-button-action{
     button{
       padding: 5px 10px;
+      margin-right: 15px;
       font-size: 17px;
       border: 2px solid #cccccc;
       background: none;
