--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -19,6 +19,10 @@
     h2{
       margin: 0;
     }
+    .task-title{
+      display: flex;
+      justify-content: space-between;
+    }
     .task-bottom{
       display: flex;
       justify-content: space-between;
