--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -8,6 +8,9 @@
     border-bottom: 2px solid #cccccc;
   }
   .home-button-action{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     button{
       padding: 5px 10px;
       margin-right: 15px;
