--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -4,7 +4,6 @@
   width: 100%;
   border-radius: 8px;
   display: flex;
-  height: 90px;
   .task-container-left{
     input{
       transform: scale(1.5);
@@ -13,7 +12,6 @@
   .task-container-content{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     padding-left: 20px;
     width: 100%;
     h2{
@@ -24,6 +22,7 @@
       justify-content: space-between;
     }
     .task-bottom{
+      margin-top: 10px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -48,6 +47,50 @@
         cursor: pointer;
       }
     }
+    .task-bonus{
+      display: flex;
+      margin-top: 10px;
+      .bonus{
+        display: flex;
+        align-items: center;
+        position: relative;
+        padding: 5px 10px;
+        .bonus-back{
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0.2;
+          border-radius: 10px;
+        }
+        .bonus-color{
+          width: 10px;
+          height: 10px;
+          border-radius: 100px;
+          margin-right: 10px;
+        }
+        span{
+          font-size: 12px;
+        }
+      }
+    }
   }
   margin-bottom: 20px;
+}
+
+.colors-container{
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  .color{
+    width: 18px;
+    height: 18px;
+    margin-right: 10px;
+    border-radius: 100px;
+    cursor: pointer;
+  }
+  .color:hover{
+    border: 2px solid #ffe200;
+  }
 }
