--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -17,6 +17,7 @@
     h2{
       margin: 0;
       color: #232323;
+      font-size: 20px;
     }
     .task-title{
       display: flex;
@@ -78,6 +79,24 @@
     }
   }
   margin-bottom: 20px;
+}
+
+.task-done{
+  .task-container-left{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .task-container-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    h2{
+      text-decoration: line-through;
+    }
+  }
+  background-color: #f5f5f5;
+  opacity: 0.8;
 }
 
 .colors-container{
