Implement NavBar and router

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,5 +1,5 @@
 .home-container{
-  padding: 20px 50px;
+  padding: 40px 80px 40px 360px;
   width: 100%;
   .home-title-container{
     h1{
@@ -22,7 +22,7 @@
       cursor: pointer;
     }
     button:hover{
-      background-color: blue;
+      background-color: #3b40d5;
       color: white;
     }
     margin: 35px 0;
