--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -41,7 +41,7 @@
       }
       button{
         padding: 5px 10px;
-        background-color: blue;
+        background-color: #3b40d5;
         font-size: 12px;
         color: #fff;
         border: none;
