Implement table components

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,7 @@
 @import "settings.scss";
 /* Pages */
 @import "./pages/home.scss";
+@import "./pages/table.scss";
 /* Components */
 @import "./components/task.scss";
 @import "./components/nav-bar.scss";
