--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -6,3 +6,14 @@ body{
   padding: 0;
   font-family: Arial;
 }
+
+.page{
+  padding: 40px 80px 40px 360px;
+  width: 100%;
+  .page-title-container{
+    h1{
+      font-size: 30px;
+    }
+    border-bottom: 2px solid #cccccc;
+  }
+}
